--- a/menu_app/app/assets/stylesheets/application.css
+++ b/menu_app/app/assets/stylesheets/application.css
@@ -1,15 +1,27 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+.user-registration {
+  color:white;
+  background-color: rgb(228, 128, 14);
+  border-radius: 10%;
+  border-radius: 15px;
+  width: 50%;
+  height: 60px;
+  line-height: 60px;
+  margin: 0 auto;
+}
+
+.user-alert {
+  color:white;
+  background-color: rgb(228, 57, 14);
+  border-radius: 10%;
+  border-radius: 15px;
+  width: 50%;
+  height: 40px;
+  line-height: 40px;
+  margin: 0 auto;
+  margin-top:3px;
+  margin-bottom:3px;
+}
+
+.message {
+  text-align: center;
+}
