--- a/menu_app/app/views/homes/top.html.erb
+++ b/menu_app/app/views/homes/top.html.erb
@@ -6,11 +6,11 @@
 <% end %>
 
 
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
-
-<p>トップページ</p>
+<h1>トップページ(Homes#top)</h1>
 <p>食材でレシピを検索等</p>
+
+<!-- ログアウトリンク -->
+<%= link_to "ログアウト", logout_path, data: { turbo_method: :delete } %>
 
 <h2>全ユーザーのログインIDとパスワード</h2>
 <% @users.each do |user| %>
