--- a/menu_app/app/views/homes/top.html.erb
+++ b/menu_app/app/views/homes/top.html.erb
@@ -11,10 +11,26 @@
 
 <!-- ログアウトリンク -->
 <%= link_to "ログアウト", logout_path, data: { turbo_method: :delete } %>
-<!-- レシピ登録ページリンク -->
+
 <% if @current_user %>
+  <!-- レシピ登録ページリンク -->
   <div><%= link_to "レシピ登録ページ", new_user_recipe_path(@current_user) %></div>
+  
+  <!-- ユーザーのレシピ一覧 -->
+  <h2>あなたのレシピ</h2>
+  <% @current_user.recipes.each do |recipe| %>
+  <div>
+    <h3><%= link_to recipe.recipe_name, user_recipe_path(recipe.user, recipe) %></h3>
+    <!-- 投稿したレシピ画像が存在すればそれを表示し、存在しなければデフォルトの画像を表示 -->
+    <% if recipe.recipe_image.attached? %>
+      <%= image_tag url_for(recipe.recipe_image), size: '300x200' %>
+    <% else %>
+      <%= image_tag "no_image.png", size: '300x200' %>
+    <% end %>
+  </div>
+  <% end %>
 <% end %>
+
 
 <h2>全ユーザーのログインIDとパスワード</h2>
 <% @users.each do |user| %>
