検索機能をアップロードし直し

--- a/menu_app/app/views/homes/top.html.erb
+++ b/menu_app/app/views/homes/top.html.erb
@@ -15,6 +15,12 @@
 <% if @current_user %>
   <!-- レシピ登録ページリンク -->
   <div><%= link_to "レシピ登録ページ", new_user_recipe_path(@current_user) %></div>
+
+  <%= form_with(url: result_user_path(@current_user), method: "get", local: true) do %>
+    <%= label_tag :ingredient_name, '食材名' %>
+    <%= text_field_tag :ingredient_name %>
+    <%= submit_tag '検索' %>
+  <% end %>
   
   <!-- ユーザーのレシピ一覧 -->
   <h2>あなたのレシピ</h2>
