編集機能の途中

--- a/menu_app/app/views/recipes/show.html.erb
+++ b/menu_app/app/views/recipes/show.html.erb
@@ -2,6 +2,9 @@
 
 <div><%= link_to "トップページ", root_path %></div>
 
+<!-- レシピ編集ページ　-->
+<div><%= link_to "レシピを編集する", edit_user_recipe_path %></div>
+
 <!-- フラッシュメッセージ -->
 <% if flash[:notice] %>
   <div class="user-registration message">
