一覧ページを仮作成

--- a/menu_app/app/views/homes/top.html.erb
+++ b/menu_app/app/views/homes/top.html.erb
@@ -10,7 +10,9 @@
 <p>食材でレシピを検索等</p>
 
 <!-- ログアウトリンク -->
-<%= link_to "ログアウト", logout_path, data: { turbo_method: :delete } %>
+<div><%= link_to "ログアウト", logout_path, data: { turbo_method: :delete } %></div>
+<!-- ユーザー一覧ページ -->
+<div><%= link_to "一覧ページ", users_all_path %></div>
 
 <% if @current_user %>
   <!-- レシピ登録ページリンク -->
