リロードしないと読み込まない問題を解決

--- a/menu_app/app/views/recipes/new.html.erb
+++ b/menu_app/app/views/recipes/new.html.erb
@@ -36,7 +36,10 @@
   </div>
 <% end %>
 
-<script src="/recipe/recipe_new.js"></script>
+<!-- JavaScriptファイルの読み込み -->
+<% content_for :javascript do %>
+  <script src="/recipe/recipe_new.js"></script>
+<% end %>
 
 
   
