--- a/menu_app/app/views/users/all.html.erb
+++ b/menu_app/app/views/users/all.html.erb
@@ -8,6 +8,7 @@
   <!-- ユーザー名とユーザーの画像を表示 -->
   <div>
     <h4><%= recipe.user.user_name.presence || "ユーザー(#{recipe.user.id})" %></h4>
+    <!-- ユーザーのプロフィール画像が存在すればそれを表示し、存在しなければデフォルトの画像を表示 -->
     <% if recipe.user.profile_image.present? %>
       <%= image_tag recipe.user.profile_image, size: '100x100' %>
     <% else %>
