--- a/menu_app/app/views/users/show.html.erb
+++ b/menu_app/app/views/users/show.html.erb
@@ -8,7 +8,8 @@
 <div><%= link_to "トップページ", root_path %></div>
 
 <% if @current_user %>
-
+  <!-- プロフィール編集ページリンク -->
+  <div><%= link_to "プロフィール編集ページ", edit_user_path(@user) %></div>
 <% end %>
 
 
