--- a/today_menu/app/assets/stylesheets/application.css
+++ b/today_menu/app/assets/stylesheets/application.css
@@ -1,3 +1,7 @@
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 .user-registration {
   color:white;
   background-color: rgb(228, 128, 14);
