レシピ検索ページの作業途中

--- a/today_menu/app/views/homes/top.html.erb
+++ b/today_menu/app/views/homes/top.html.erb
@@ -5,14 +5,23 @@
 <header>
   <div class="header-actions">
     <div class="header-log">
-      <a><i class="fa-solid fa-key"></i>こんみる</a>
+      <a><i class="fa-solid fa-utensils"></i></i><div class="logo-text">こんみる</div></a>
     </div>
     <!-- ログアウトリンク -->
-    <div><%= link_to "ログアウト", logout_path, data: { turbo_method: :delete } %></div>
+    <%= link_to logout_path, data: { turbo_method: :delete }, class:"header-link" do %>
+      <div class="link-icon"><i class="fa-solid fa-share-from-square"></i></div>
+      <div class="header-link-text">ログアウト</div>
+    <% end %>
     <!-- ユーザー一覧ページ -->
-    <div><%= link_to "みんなのレシピ", users_all_path %></div>
+    <%= link_to users_all_path, class:"header-link" do %>
+      <div class="link-icon"><i class="fa-solid fa-users"></i></div>
+      <div class="header-link-text">レシピ一覧</div>
+    <% end %>
     <!-- プロフィール編集ページリンク -->
-    <div><%= link_to "編集", edit_user_path(@current_user) %></div>
+    <%= link_to edit_user_path(@current_user), class:"header-link" do %>
+      <div class="link-icon"><i class="fa-solid fa-user-gear"></i></div>
+      <div class="header-link-text">編集</div>
+    <% end %>
   
     <!-- プロフィール写真 -->
     <div class="profile-image">
@@ -25,46 +34,51 @@
   </div>
     
 </header>
+<!-- ヘッダー部分終了 -->
 
-
-
+<!-- メインコンテンツ～ -->
 <main>
-  <h1>トップページ(Homes#top)</h1>
-  <p>食材でレシピを検索等</p>
+  <p class="search-text">食材を入力して登録したレシピを検索</p>
   
-    <!-- レシピ登録ページリンク -->
-    <div><%= link_to "レシピ登録ページ", new_user_recipe_path(@current_user) %></div>
-  
-    <!-- 検索フォーム -->
-    <%= form_with(url: result_user_path(@current_user), method: "get", local: true, id: "ingredient_search_form") do %>
-      <%= label_tag :ingredient_name, '食材名' %>
-      <%= text_field_tag :ingredient_name, nil, id: "ingredient_name"%>
-      <%= submit_tag '検索' %>
-  
-    <!-- ユーザーのレシピ一覧 -->
-    <h2>あなたのレシピ</h2>
-    <% @current_user.recipes.each do |recipe| %>
-    <div>
-      <h3><%= link_to recipe.recipe_name, user_recipe_path(recipe.user, recipe) %></h3>
-      <!-- 投稿したレシピ画像が存在すればそれを表示し、存在しなければデフォルトの画像を表示 -->
-      <% if recipe.recipe_image.attached? %>
-        <%= image_tag url_for(recipe.recipe_image), size: '300x200' %>
-      <% else %>
-        <%= image_tag "no_image.png", size: '300x200' %>
+  <!-- 検索フォーム -->
+  <%= form_with(url: result_user_path(@current_user), method: "get", local: true, id: "ingredient_search_form") do %>
+    <div class="search-container">
+      <%= text_field_tag :ingredient_name, nil, id: "ingredient_name", placeholder: "食材名を入れてください" %>
+      <%= button_tag(type: 'submit') do %>
+        <i class="fa-solid fa-magnifying-glass"></i>
       <% end %>
     </div>
+  <% end %>
+
+  <p class="announce-text">レシピ登録はこちらから</p>
+  <!-- レシピ登録ページリンク -->
+  <div><%= link_to "レシピを登録する", new_user_recipe_path(@current_user), class: "registration btn" %></div>
+  
+  <div class="recipe-container">
+    <!-- ユーザーのレシピ一覧 -->
+    <p class="container-title">あなたのレシピ</p>
+    <!-- 食材リストが並ぶ -->
+    <% @current_user.recipes.each do |recipe| %>
+      <div class="recipes">
+        <%= link_to user_recipe_path(recipe.user, recipe), class: "recipe-link" do %>
+          <!-- 投稿したレシピ画像が存在すればそれを表示し、存在しなければデフォルトの画像を表示 -->
+          <div class="recipe-image"> 
+            <% if recipe.recipe_image.attached? %>
+              <%= image_tag url_for(recipe.recipe_image), size: '250x150' %>
+            <% else %>
+              <%= image_tag "no_image.png", size: '250x150' %>
+            <% end %>
+          </div>
+          <div class="recipe-name"><%= recipe.recipe_name %></div>
+        <% end %>
+      </div>
     <% end %>
-  <% end %>
+    <!-- 食材リストここまで -->
+
+  </div>
   
-  
-  <h2>全ユーザーのログインIDとパスワード</h2>
-  <% @users.each do |user| %>
-    <div>
-      <p>ログインID: <%= user.login_key %></p>
-      <p>パスワード: <%= user.password_digest %></p>
-    </div>
-  <% end %>
 </main>
+<!-- ～メインコンテンツ -->
 
 <!-- JavaScriptファイルの読み込み -->
 <script src="/home/home.js"></script>
