--- a/today_menu/app/views/users/new.html.erb
+++ b/today_menu/app/views/users/new.html.erb
@@ -4,7 +4,7 @@
 <!-- ヘッダー部分 -->
 <header>
   <div class="header-log">
-    <a><i class="fa-solid fa-share-from-square"></i>新規登録</a>
+    <a><i class="fa-solid fa-user-plus"></i></i>新規登録</a>
   </div>
 </header>
 
@@ -12,7 +12,7 @@
 <!-- コンテンツ部分 -->
 <main>
   <div class="mini-message">
-    <h3>新規登録がお済みでない方</h3>
+    <h3>新規登録済みでない方</h3>
   </div>
 
   <div class="form-message">
@@ -59,7 +59,7 @@
   <!-- 新規登録フォーム終了 -->
   
   <div class="mini-message">
-    <h3>新規登録済がお済みの方</h3>
+    <h3>新規登録済みの方</h3>
   </div>
 
   <div class="new-registration">
