--- a/today_menu/app/views/users/result.html.erb
+++ b/today_menu/app/views/users/result.html.erb
@@ -1,29 +1,74 @@
-<h1>検索結果</h1>
+<!-- CSSファイルの読み込み -->
+<link rel="stylesheet" href="/home/top.css">
 
-<div><%= link_to "トップページ", root_path %></div>
-
-<!-- 検索フォーム -->
-  <%= form_with(url: result_user_path(@current_user), method: "get", local: true, id: "ingredient_search_form") do %>
-    <%= label_tag :ingredient_name, '食材名' %>
-    <%= text_field_tag :ingredient_name, nil, id: "ingredient_name"%>
-    <%= submit_tag '検索' %>
-  <% end %>
-
-<% if @recipes.any? %>
-  <% @recipes.each do |recipe| %>
-    <div>
-      <h3><%= link_to recipe.recipe_name, user_recipe_path(recipe.user, recipe) %></h3>
-      <!-- 投稿したレシピ画像が存在すればそれを表示し、存在しなければデフォルトの画像を表示 -->
-      <% if recipe.recipe_image.attached? %>
-        <%= image_tag url_for(recipe.recipe_image), size: '300x200' %>
+<!-- ヘッダー部分 -->
+<header>
+  <div class="header-actions">
+    <div class="header-log">
+      <a><i class="fa-solid fa-utensils"></i></i><div class="logo-text">こんみる</div></a>
+    </div>
+    <!-- ログアウトリンク -->
+    <%= link_to logout_path, data: { turbo_method: :delete }, class:"header-link" do %>
+      <div class="link-icon"><i class="fa-solid fa-share-from-square"></i></div>
+      <div class="header-link-text">ログアウト</div>
+    <% end %>
+    <!-- ユーザー一覧ページ -->
+    <%= link_to users_all_path, class:"header-link" do %>
+      <div class="link-icon"><i class="fa-solid fa-users"></i></div>
+      <div class="header-link-text">レシピ一覧</div>
+    <% end %>
+    <!-- プロフィール編集ページリンク -->
+    <%= link_to root_path, class:"header-link" do %>
+      <div class="link-icon"><i class="fa-solid fa-house"></i></div>
+      <div class="header-link-text">ホーム</div>
+    <% end %>
+  
+    <!-- プロフィール写真 -->
+    <div class="profile-image">
+      <% if @current_user.profile_image.attached? %>
+        <%= image_tag @current_user.profile_image, size: '50x50' %>
       <% else %>
-        <%= image_tag "no_image.png", size: '300x200' %>
+      <%= image_tag "no_image.png", size: '50x50' %>
+      <% end %>
+    </div>
+  </div>
+    
+</header>
+<!-- ヘッダー部分終了 -->
+
+<main>
+  <p class="search-text">食材を入力して登録したレシピを検索</p>
+  <!-- 検索フォーム -->
+  <%= form_with(url: result_user_path(@current_user), method: "get", local: true, id: "ingredient_search_form") do %>
+    <div class="search-container">
+      <%= text_field_tag :ingredient_name, nil, id: "ingredient_name", placeholder: "食材名を入れてください" %>
+      <%= button_tag(type: 'submit') do %>
+        <i class="fa-solid fa-magnifying-glass"></i>
       <% end %>
     </div>
   <% end %>
-<% else %>
-  <p>該当するレシピが見つかりませんでした。</p>
-<% end %>
+  
+  <!-- レシピ登録ページリンク -->
+  <div><%= link_to "レシピを追加する", new_user_recipe_path(@current_user), class: "registration btn" %></div>
+
+  <h2><%= params[:ingredient_name] %>を使ったレシピ</h2>
+  
+  <% if @recipes.any? %>
+    <% @recipes.each do |recipe| %>
+      <div>
+        <h3><%= link_to recipe.recipe_name, user_recipe_path(recipe.user, recipe) %></h3>
+        <!-- 投稿したレシピ画像が存在すればそれを表示し、存在しなければデフォルトの画像を表示 -->
+        <% if recipe.recipe_image.attached? %>
+          <%= image_tag url_for(recipe.recipe_image), size: '300x200' %>
+        <% else %>
+          <%= image_tag "no_image.png", size: '300x200' %>
+        <% end %>
+      </div>
+    <% end %>
+  <% else %>
+    <p>該当するレシピが見つかりませんでした。</p>
+  <% end %>
+</main>
 
 <!-- JavaScriptファイルの読み込み -->
 <script src="/home/home.js"></script>
