--- a/today_menu/public/session/new.css
+++ b/today_menu/public/session/new.css
@@ -73,6 +73,7 @@ main {
 .login {
   background-color:#fb914a;
   color:white;
+  font-weight: 600;
   border: 1px solid #fb914a;
 }
 
@@ -102,6 +103,7 @@ main {
 .registration {
   text-decoration: none;
   color:white;
+  font-weight: 600;
   font-size:13px;
   background-color: #66450f;
   text-align: center;
