--- a/today_menu/public/user/new.css
+++ b/today_menu/public/user/new.css
@@ -73,6 +73,7 @@ main {
 .login {
   background-color: #66450f;;
   color:white;
+  font-weight: 600;
   border: 1px solid #66450f;
 }
 
@@ -103,6 +104,7 @@ main {
 .registration {
   text-decoration: none;
   color:white;
+  font-weight: 600;
   font-size:13px;
   background-color: #fb914a;
   text-align: center;
