--- a/today_menu/app/views/homes/top.html.erb
+++ b/today_menu/app/views/homes/top.html.erb
@@ -39,7 +39,6 @@
 <!-- メインコンテンツ～ -->
 <main>
   <p class="search-text">食材を入力して登録したレシピを検索</p>
-  
   <!-- 検索フォーム -->
   <%= form_with(url: result_user_path(@current_user), method: "get", local: true, id: "ingredient_search_form") do %>
     <div class="search-container">
@@ -64,9 +63,9 @@
           <!-- 投稿したレシピ画像が存在すればそれを表示し、存在しなければデフォルトの画像を表示 -->
           <div class="recipe-image"> 
             <% if recipe.recipe_image.attached? %>
-              <%= image_tag url_for(recipe.recipe_image), size: '250x150' %>
+              <%= image_tag url_for(recipe.recipe_image), size: '200x140', class: "image" %>
             <% else %>
-              <%= image_tag "no_image.png", size: '250x150' %>
+              <%= image_tag "no_image.png", size: '200x140', class: "image" %>
             <% end %>
           </div>
           <div class="recipe-name"><%= recipe.recipe_name %></div>
