--- a/today_menu/app/views/users/result.html.erb
+++ b/today_menu/app/views/users/result.html.erb
@@ -51,23 +51,35 @@
   <!-- レシピ登録ページリンク -->
   <div><%= link_to "レシピを追加する", new_user_recipe_path(@current_user), class: "registration btn" %></div>
 
-  <h2><%= params[:ingredient_name] %>を使ったレシピ</h2>
-  
-  <% if @recipes.any? %>
-    <% @recipes.each do |recipe| %>
-      <div>
-        <h3><%= link_to recipe.recipe_name, user_recipe_path(recipe.user, recipe) %></h3>
-        <!-- 投稿したレシピ画像が存在すればそれを表示し、存在しなければデフォルトの画像を表示 -->
-        <% if recipe.recipe_image.attached? %>
-          <%= image_tag url_for(recipe.recipe_image), size: '300x200' %>
-        <% else %>
-          <%= image_tag "no_image.png", size: '300x200' %>
+  <!-- 検索結果のレシピ一覧 -->
+  <div class="recipe-container">
+    <p class="container-title"><%= params[:ingredient_name] %>を使ったレシピ</p>
+    <!-- 検索結果の食材リストが並ぶ -->
+    <% if @recipes.any? %>
+      <% @recipes.each do |recipe| %>
+        <div class="recipes">
+        <%= link_to user_recipe_path(recipe.user, recipe), class: "recipe-link" do %>
+          <!-- 投稿したレシピ画像が存在すればそれを表示し、存在しなければデフォルトの画像を表示 -->
+          <div class="recipe-image"> 
+          <% if recipe.recipe_image.attached? %>
+            <%= image_tag url_for(recipe.recipe_image), size: '200x140', class: "image" %>
+          <% else %>
+            <%= image_tag "no_image.png", size: '200x140', class: "image" %>
+          <% end %>
+          </div>
+          <div class="recipe-name"><%= recipe.recipe_name %></div>
         <% end %>
-      </div>
-    <% end %>
-  <% else %>
+        </div>
+      <% end %>
+    <% else %>
     <p>該当するレシピが見つかりませんでした。</p>
-  <% end %>
+    <% end %>
+
+  </div>
+    <!-- 食材リストここまで -->
+
+  
+  
 </main>
 
 <!-- JavaScriptファイルの読み込み -->
