--- a/today_menu/public/home/top.css
+++ b/today_menu/public/home/top.css
@@ -164,6 +164,7 @@ button {
 
 .registration {
   text-decoration: none;
+  margin-top:1em;
   color:white;
   font-size:14px;
   font-weight: 600;
@@ -205,6 +206,10 @@ button {
 
 .recipes:hover {
   background-color: #e6e5e5;
+}
+
+.image {
+  border-radius: 0.3em;
 }
 
 .recipe-name {
