--- a/today_menu/public/user/result.css
+++ b/today_menu/public/user/result.css
@@ -207,6 +207,10 @@ button {
   background-color: #e6e5e5;
 }
 
+.image {
+  border-radius: 0.3em;
+}
+
 .recipe-name {
   color:#444;
   font-size:1em;
