--- a/today_menu/app/views/users/result.html.erb
+++ b/today_menu/app/views/users/result.html.erb
@@ -41,7 +41,7 @@
   <!-- 検索フォーム -->
   <%= form_with(url: result_user_path(@current_user), method: "get", local: true, id: "ingredient_search_form") do %>
     <div class="search-container">
-      <%= text_field_tag :ingredient_name, nil, id: "ingredient_name", placeholder: "食材名を入れてください" %>
+      <%= text_field_tag :ingredient_name, nil, id: "ingredient_name", placeholder: "食材名を入力" %>
       <%= button_tag(type: 'submit') do %>
         <i class="fa-solid fa-magnifying-glass"></i>
       <% end %>
@@ -74,12 +74,8 @@
     <% else %>
     <p>該当するレシピが見つかりませんでした。</p>
     <% end %>
-
   </div>
     <!-- 食材リストここまで -->
-
-  
-  
 </main>
 
 <!-- JavaScriptファイルの読み込み -->
